--- a/Software_Code/resources/styles/range.css
+++ b/Software_Code/resources/styles/range.css
@@ -84,7 +84,7 @@ input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
     cursor: pointer;
     height: 1em;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+    border-bottom: 2px solid #0297a2;
     background-color: transparent;
 }
 
@@ -92,7 +92,7 @@ input[type=range]::-moz-range-track {
     width: 100%;
     cursor: pointer;
     height: 1em;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+    border-bottom: 2px solid #0297a2;
     background-color: transparent;
 }
 
